--- a/6월/4주차/html/시험.html
+++ b/6월/4주차/html/시험.html
@@ -129,7 +129,7 @@
                 frm.name.focuse;
                 return;
             }
-            let resultText = frm.apply.value + "님은 " + frm.phone.value + "분야에 지원하셨습니다.";
+            let resultText = frm.name.value + "님은 " + frm.apply.value + "분야에 지원하셨습니다.";
             document.getElementById("result").innerHTML = resultText;
             let id = setTimeout(() => { alert("부산소프트웨어마이스터고에 지원해주셔서 감사합니다.") }, 3000)
 
